OPA/min-replica-count/ConstraintTemplate.yml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: minreplicacount
spec:
  crd:
    spec:
      names:
        kind: MinReplicaCount
      validation:
        openAPIV3Schema:
          properties:
            min: 
              type: integer

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package minreplicacount

        violation[{"msg": msg, "details": {"missing_replicas": missing}}] {
          provided := input.review.object.spec.replicas
          required := input.parameters.min
          missing := required - provided
          missing > 0
          msg := sprintf("you must provide %v more replicas", [missing])
        }
